# HexConquest

./: .gitignore  README.md
HexConquest/: Client.cs  project.godot
HexServer/: HexConquestServer.sln  Server.cs  export_presets.cfg  project.godot
hexconquest/: Button.cc  Client.cs  HexConquest.apple-touch-icon.png.import  HexConquest.html  HexConquest.icon.png.import  HexConquest.png.import  HexConquest.sln  Node.tscn  SendMessage.cs  export_presets.cfg  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.2.json  mono_crash.0.3.json  mono_crash.0.4.json  mono_crash.0.5.json  mono_crash.0.6.json  mono_crash.0.7.json  mono_crash.0.8.json  mono_crash.0.9.json  mono_crash.31d376ae1.0.json  send_message.cs
hexconquest/.mono/metadata/: ide_messaging_meta.txt  scripts_metadata.debug  scripts_metadata.editor_player
hexconquestserver/: Cargo.toml
hexconquestserver/src/: logic.rs  main.rs  messages.rs
hexgodot/: export_presets.cfg  icon.svg.import  project.godot
hexgodot/data/: world_gen.tres
hexgodot/scenes/: camera_2d.gd  camera_2d.gd.uid  game.tscn  game.tscn60980299262.tmp  lobby.tscn  title.tscn  unit_display.tscn  world_gen.tscn
hexgodot/scripts/: MyTileData.gd  MyTileData.gd.uid  client.gd  client.gd.uid  game_controller.gd  game_controller.gd.uid  gameplay.gd  gameplay.gd.uid  lobby.gd  lobby.gd.uid  map.gd  map.gd.uid  player_influence.gd  player_influence.gd.uid  titlebuttons.gd  titlebuttons.gd.uid  unit.gd  unit_display.gd  unit_display.gd.uid  unit_placer.gd  unit_placer.gd.uid  units_layer.gd  units_layer.gd.uid  world_gen.gd  world_gen.gd.uid
(+5 files in other folders)
