[package]
name = "hexconquestserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8", features=["ws"]}
axum-extra = {version="0.10.0",features = ["typed-header"]}
headers = "0.4.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
tracing = "0.1.41"
